--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "nodemon lib/index.js --exec babel-node",
     "build": "babel lib -d dist",
-    "serve": "node dist/index.js"
+    "serve": "node index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -16,6 +16,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.22.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "request-promise": "^4.1.1"
