--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.22.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "request": "^2.79.0",
     "request-promise": "^4.1.1"
   }
 }
