--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "memory-cache": "^0.1.6",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   }
