--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "helmet": "^3.4.0",
     "memory-cache": "^0.1.6",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
