--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon lib/index.js --exec babel-node",
     "build": "babel lib -d dist",
     "start": "node index.js",
-    "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server"
+    "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server",
+    "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master"
   },
   "devDependencies": {
     "apidoc": "^0.17.5",
