--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "nodemon lib/index.js --exec babel-node",
     "build": "babel lib -d dist",
-    "prestart": "npm install",
-    "start": "npm-run-all --parallel run restart",
+    "start": "npm run run | npm run restart",
     "run": "forever start index.js",
     "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server",
     "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master",
@@ -21,8 +20,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "forever": "^0.15.3",
-    "nodemon": "^1.11.0",
-    "npm-run-all": "^4.0.2"
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
     "compression": "^1.6.2",
