--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon lib/index.js --exec babel-node",
     "build": "babel lib -d dist",
     "start": "npm run run | npm run restart",
-    "run": "forever start index.js",
+    "run": "node_modules/forever/bin/forever start index.js",
     "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server",
     "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master",
     "restart": "sleep 300 && killall node && yarn restart"
