--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "nodemon lib/index.js --exec babel-node",
     "build": "babel lib -d dist",
     "start": "npm run run | npm run restart",
-    "run": "node_modules/forever/bin/forever start index.js",
+    "run": "start index.js",
     "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server",
     "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master",
-    "restart": "sleep 300 && killall node && yarn restart"
+    "restart": "sleep 300 && killall node && yarn start"
   },
   "devDependencies": {
     "apidoc": "^0.17.5",
@@ -19,7 +19,6 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "forever": "^0.15.3",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
