--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "run": "node index.js",
     "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server",
     "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master",
-    "restart": "sleep 300 && killall node && yarn start"
+    "restart": "sleep 300 && node restart.js && yarn start"
   },
   "devDependencies": {
     "apidoc": "^0.17.5",
