--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
   "devDependencies": {
     "apidoc": "^0.17.5",
     "babel-cli": "^6.22.2",
+    "babel-eslint": "^8.0.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "nodemon": "^1.11.0"
+    "eslint": "^4.7.2",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "nodemon": "^1.11.0",
+    "prettier": "^1.7.0"
   },
   "dependencies": {
     "compression": "^1.6.2",
