--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "babel-cli": "^6.22.2",
     "babel-eslint": "^8.0.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.22.0",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
