--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon lib/index.js --exec babel-node",
-    "build": "babel lib -d dist",
-    "start": "node index.js",
+    "dev": "nodemon lib/index.js",
+    "start": "node lib/index.js",
     "docs": "apidoc -i lib/ -o docs/ && cd docs && live-server",
     "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master"
   },
   "devDependencies": {
     "apidoc": "^0.17.5",
-    "babel-cli": "^6.22.2",
-    "babel-eslint": "^8.0.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "nodemon": "^1.11.0"
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.11.0",
+    "eslint-config-prettier": "^2.7.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "nodemon": "^1.12.1",
+    "prettier": "^1.8.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
