--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.14.0",
     "graphql": "^14.3.0",
     "helmet": "^3.4.0",
+    "lodash.merge": "^4.6.1",
     "memory-cache": "^0.1.6",
     "now-logs": "^0.0.7",
     "random-useragent": "^0.3.1",
